--- a/SteamUpdateProject/SteamUpdateDiscordBot.csproj
+++ b/SteamUpdateProject/SteamUpdateDiscordBot.csproj
@@ -9,12 +9,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DSharpPlus" Version="4.3.0-nightly-01140" />
-    <PackageReference Include="DSharpPlus.CommandsNext" Version="4.3.0-nightly-01140" />
-    <PackageReference Include="DSharpPlus.Interactivity" Version="4.3.0-nightly-01140" />
-    <PackageReference Include="MongoDB.Bson" Version="2.15.1" />
-    <PackageReference Include="MongoDB.Driver" Version="2.15.1" />
-    <PackageReference Include="MongoDB.Driver.Core" Version="2.15.1" />
+    <PackageReference Include="DSharpPlus" Version="4.3.0" />
+    <PackageReference Include="DSharpPlus.CommandsNext" Version="4.3.0" />
+    <PackageReference Include="DSharpPlus.Interactivity" Version="4.3.0" />
+    <PackageReference Include="MongoDB.Bson" Version="2.19.0" />
+    <PackageReference Include="MongoDB.Driver" Version="2.19.0" />
+    <PackageReference Include="MongoDB.Driver.Core" Version="2.19.0" />
     <PackageReference Include="SteamKit2" Version="2.4.1" />
   </ItemGroup>
 </Project>
